force-app/main/default/objects/Account/fields/Raison_Sociale__c.field-meta.xml
<CustomField>
    <fullName>Raison_Sociale__c</fullName>
    <label>Raison Sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>