force-app/main/default/objects/Account/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <description>siret</description>
    <label>SIRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>