force-app/main/default/objects/Account/fields/siretisation__c.field-meta.xml
<CustomField>
    <fullName>siretisation__c</fullName>
    <label>siretisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>actif</fullName>
            </value>
            <value>
                <fullName>inactif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>