force-app/main/default/objects/Account/recordTypes/Digital_Plant.recordType-meta.xml
<RecordType>
    <fullName>Digital_Plant</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour la société Digital Plant</description>
    <label>Digital Plant</label>
</RecordType>