force-app/main/default/objects/Account/recordTypes/Synapsys.recordType-meta.xml
<RecordType>
    <fullName>Synapsys</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour la société Synapsys</description>
    <label>Synapsys</label>
</RecordType>