force-app/main/default/objects/Account/recordTypes/Youand.recordType-meta.xml
<RecordType>
    <fullName>Youand</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour la société Youand</description>
    <label>Youand</label>
</RecordType>